[package]
name = "sdl2-gallery"
version = "0.1.0"
authors = ["Amadeus <gliheng@gmail.com>"]

[dependencies]
stdweb = "0.3.0"
serde = "1.0.27"
serde_derive = "1.0.27"
lazy_static = "1.0.0"

[dependencies.sdl2]
version = "0.31.0"
default-features = false
features = ["gfx", "image", "unsafe_textures"]
